split benchmarks