@@ -6,15 +6,41 @@ APP_HOME=`cd "$PRGDIR/.." >/dev/null; pwd`
 #$JAVA_OPTS=
 CLASS_PATH="$APP_HOME/benchmark.geode-1.0-SNAPSHOT.jar:$APP_HOME/conf:$APP_HOME/lib/*:$GEMFIRE_HOME/lib/*:"
 
-gfsh start server \
-    --dir=$APP_HOME/server1 --locators=10.212.1.116[10680] \
-    --classpath=$CLASS_PATH \
-    --properties-file=$APP_HOME/conf/geode-server.properties \
-    --cache-xml-file=$APP_HOME/conf/geode-server.xml \
-    --server-port=40405 \
-    --bind-address=10.212.1.117 \
-    --name=server1 \
-    --initial-heap=512M \
-    --max-heap=512M \
-    --off-heap-memory-size=512M \
-    --critical-off-heap-percentage=90 --eviction-off-heap-percentage=80
+#gfsh start server \
+#    --dir=$APP_HOME/server1 --locators=10.212.1.116[10680] \
+#    --classpath=$CLASS_PATH \
+#    --properties-file=$APP_HOME/conf/geode-server.properties \
+#    --cache-xml-file=$APP_HOME/conf/geode-server.xml \
+#    --server-port=40405 \
+#    --bind-address=10.212.1.117 \
+#    --name=server1 \
+#    --initial-heap=512M \
+#    --max-heap=512M \
+#    --off-heap-memory-size=512M \
+#    --critical-off-heap-percentage=90 --eviction-off-heap-percentage=80
+
+WORK_DIRECTORY="$APP_HOME/logs"
+
+APP_PID=$RANDOM
+TODAY=`date +%Y-%m-%d.%H-%M-%S`
+
+if [ ! -d "$WORK_DIRECTORY" ]; then
+  mkdir -p "$WORK_DIRECTORY"
+fi
+
+MEM_OPTS="-Xms512m -Xmx512m -XX:+HeapDumpOnOutOfMemoryError"
+GC_OPTS="-XX:+UseG1GC -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps -Xloggc:$WORK_DIRECTORY/geode-gc.$TODAY.$APP_PID.log"
+JAVA_OPTS="-server -showversion \
+-Dhazelcast.config=$HAZELCAST_HOME/conf/hazelcast-server.xml \
+-Dhazelcast.enterprise.license.key=$HAZELCAST_LICENSE_KEY \
+$MEM_OPTS $GC_OPTS"
+
+CLASS_PATH="\
+$HAZELCAST_HOME/conf:\
+$HAZELCAST_HOME/benchmark.hazelcast-1.0-SNAPSHOT.jar:\
+$HAZELCAST_HOME/lib/*"
+
+COMMAND_LINE="java $JAVA_OPTS -cp $CLASS_PATH  com.hazelcast.poc.Member"
+echo $COMMAND_LINE
+$COMMAND_LINE
+
